--- a/Portfolio-WebsiteV2.0/index.html
+++ b/Portfolio-WebsiteV2.0/index.html
@@ -11,7 +11,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Prabhat - Portfolio website</title>
+    <title>Prabhat - Dev Portfolio v2.0</title>
   </head>
   <body>
     <div id="root"></div>
