--- a/Portfolio-WebsiteV2.0/index.html
+++ b/Portfolio-WebsiteV2.0/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx" defer ></script>
+    <script defer type="module" src="/src/main.tsx" defer ></script>
   </body>
 </html>
